syntax = "proto3";

package kv_store;

// Request for setting a value
message SetRequest {
    string key = 1;
    string value = 2;
}

// Response for setting a value
message SetResponse {
    bool success = 1;
}

// Request for getting a value
message GetRequest {
    string key = 1;
}

// Response for getting a value
message GetResponse {
    string value = 1;
}

// Request for deleting a value
message DeleteRequest {
    string key = 1;
}

// Response for deleting a value
message DeleteResponse {
    bool success = 1;
}

// The key-value store service
service KvStore {
    rpc Set(SetRequest) returns (SetResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc Delete(DeleteRequest) returns (DeleteResponse);
}
